# memory-price-tracker

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  pyproject.toml  run.sh
.github/workflows/: pages.yml
api/: main.py  requirements.txt
bot/: index.js  package.json
docs/plans/: 2026-04-02-full-scale-design.md  2026-04-02-implementation-plan.md  2026-04-02-memory-price-tracker-design.md
scraper/: brand.py  crawl_all.py  currency.py  db.py  main.py  requirements.txt
scraper/crawlers/: chipdip.py  ebay.py  findchips.py  jlcpcb.py  memorymarket.py  szlcsc.py
src/: config.py  main.py  models.py  sheets.py
src/scrapers/: base.py  chipdip.py  ebay.py  findchips.py  jlcpcb.py  lcsc.py  memorymarket.py  mouser.py  szlcsc.py
tests/: test_chipdip.py  test_currency.py  test_ebay.py  test_findchips.py  test_jlcpcb.py  test_lcsc.py  test_memorymarket.py  test_models.py  test_mouser.py  test_sheets.py  test_szlcsc.py
tests/fixtures/: chipdip_product.html  ebay_search.html  findchips_search.html  jlcpcb_response.json  memorymarket_spot.html  szlcsc_search.html
webapp/: index.html
